stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__parse_tests__stack_depth_too_deep_case_3_list_only_checker.snap
---
source: stackslib/src/chainstate/tests/parse_tests.rs
expression: result
---
[
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch33,
    error: "Invalid Stacks block 77dff55506d7ea970b16e613927c6833bc90f3050dcb1e9465fb4bf4b7d532a5: ClarityError(Parse(ParseError { err: ExpressionStackDepthTooDeep, pre_expressions: None, diagnostic: Diagnostic { level: Error, message: \"AST has too deep of an expression nesting. The maximum stack depth is 64\", spans: [], suggestion: None } }))",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch33,
    error: "Invalid Stacks block 107d0b7d94c0c6513576141cdd3d52ca114a8ba911a2ae679259f9a5e75b8234: ClarityError(Parse(ParseError { err: ExpressionStackDepthTooDeep, pre_expressions: None, diagnostic: Diagnostic { level: Error, message: \"AST has too deep of an expression nesting. The maximum stack depth is 64\", spans: [], suggestion: None } }))",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch33,
    error: "Invalid Stacks block e9368a8434daea84413ad8fbcd7b54a803a29226c661a39b0bfa45a439e566f9: ClarityError(Parse(ParseError { err: ExpressionStackDepthTooDeep, pre_expressions: None, diagnostic: Diagnostic { level: Error, message: \"AST has too deep of an expression nesting. The maximum stack depth is 64\", spans: [], suggestion: None } }))",
  )),
  Failure(ExpectedFailureOutput(
    evaluated_epoch: Epoch33,
    error: "Invalid Stacks block ca7068f452dcf6fa11c583f3885ef3263afcc876a46e24cced6438d5e71aae65: ClarityError(Parse(ParseError { err: ExpressionStackDepthTooDeep, pre_expressions: None, diagnostic: Diagnostic { level: Error, message: \"AST has too deep of an expression nesting. The maximum stack depth is 64\", spans: [], suggestion: None } }))",
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "95cef5d1389a5a49a195444778181a51bfb7ecddd2fb56f3b305fd4cb8d4bcb8",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(AST has too deep of an expression nesting. The maximum stack depth is 64) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 13203,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 13203,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "68dd40af5e56677efdb402eb15bfe8231c810aa0e2f9ef3ba6f2fb0bbefdbd7c",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(AST has too deep of an expression nesting. The maximum stack depth is 64) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 13203,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 13203,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3d72d84427d99cb3d9f043f9d2fbd00daf5426b58ede4e09782a32682dd11195",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(AST has too deep of an expression nesting. The maximum stack depth is 64) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 13203,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 13203,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "77b00baef0bdcf250e56869b2399b5d824ccee61bb85c279dc260de46f0fe441",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(AST has too deep of an expression nesting. The maximum stack depth is 64) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 13203,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 13203,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c4b49adc9926d7d3e14ab7456e32b67e3f56e9d6131ce4cce0f84c111b0c4804",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(AST has too deep of an expression nesting. The maximum stack depth is 64) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 13203,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 13203,
    ),
  )),
]
